# Bachelorpraktikum

./: .clang-format  .gitignore  CMakeLists.txt  README.md
input/8/network/: rank_2_out_network.txt  rank_3_in_network.txt  (+5 more)
input/distributed_1/: rank_0_positions.txt
input/distributed_2/: rank_1_out_edges.txt
input/distributed_4/: rank_1_in_edges.txt
input/distributed_5/: rank_1_in_edges.txt
input/distributed_6/: rank_0_in_edges.txt  rank_0_out_edges.txt  rank_1_out_edges.txt  rank_3_positions.txt
input/distributed_8/: rank_1_positions.txt  rank_3_out_edges.txt  rank_5_positions.txt  rank_7_in_edges.txt
input/networkMotif11_ranks3/: rank_1_out_edges.txt  rank_2_out_edges.txt
input/networkMotif12_ranks3/: rank_1_in_edges.txt
input/networkMotif4_ranks3/: rank_1_out_edges.txt
input/networkMotif9_ranks3/: rank_2_in_edges.txt
networkGenerator/: file_writing.py  main.py  morton_code.py  network.py  network_generation.py  rank.py
source/: AlgorithmTests.cpp  AlgorithmTests.h  AllPairsShortestPath.h  AreaConnectivity.cpp  AreaConnectivity.h  Assortativity.cpp  Assortativity.h  CMakeLists.txt  Centrality.h  CentralityApprox.cpp  CentralityApprox.h  Clustering.h  CommunicationPatterns.cpp  CommunicationPatterns.h  DegreeCounter.h  Distance.h  DistributedGraph.cpp  DistributedGraph.h  Edge.h  EdgeCache.h  EdgeCounter.h  EdgeLength.h  GraphProperty.cpp  GraphProperty.h  Histogram.cpp  Histogram.h  MPIWrapper.h  Modularity.cpp  Modularity.h  NetworkMotifs.cpp  NetworkMotifs.h  NodeCounter.h  ScalableGraphAlgorithm.cpp  Status.h  Util.h  Vec3.h
(+141 files in other folders)
